--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,50 @@ body {
   background-color: #f9fafb;
   color: #111827;
 }
+
+/* Button 52 Style - with blue shadow */
+.button-floating {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid #1e40af;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(59, 130, 246, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  transition: all 0.3s ease;
+}
+
+.button-floating:after {
+  content: "";
+  background-color: #1e40af;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+  border-radius: 0.5rem;
+}
+
+.button-floating:hover:after {
+  top: 0px;
+  left: 0px;
+}
+
+.button-floating:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+@media (min-width: 768px) {
+  .button-floating {
+    padding: 13px 50px 13px;
+  }
+}
+
