--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,23 +23,24 @@ body {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  transition: all 0.2s ease;
   border-radius: 0.5rem;
   display: block;
   width: 100%;
+  z-index: 1;
 }
 
 .button-floating::after {
   content: "";
   background-color: #1e40af;
+  border: 2px solid #1e40af;
   width: 100%;
-  z-index: -1;
-  position: absolute;
   height: 100%;
+  position: absolute;
   top: 7px;
   left: 7px;
   transition: all 0.2s ease;
   border-radius: 0.5rem;
+  z-index: -1;
 }
 
 .button-floating:hover::after {
