--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,8 +31,8 @@ body {
 
 .button-floating::after {
   content: "";
-  background-color: #1e40af;
-  border: 2px solid #1e40af;
+  background-color: #fbfbfb;
+  border: 2px solid #4c72ee;
   width: 100%;
   height: 100%;
   position: absolute;
