--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ body {
 
 .button-floating::after {
   content: "";
-  background-color: #fbfbfb;
+  background-color: #f2f2f4;
   border: 2px solid #4c72ee;
   width: 100%;
   height: 100%;
@@ -40,6 +40,7 @@ body {
   left: 7px;
   transition: all 0.2s ease;
   border-radius: 0.5rem;
+  z-index: -1;
 }
 
 .button-floating:hover::after {
