--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,11 +15,11 @@ body {
   letter-spacing: 0.5px;
   padding: 13px 20px;
   outline: 0;
-  border: 2px solid #060606;
+  border: 2px solid #1e40af;
   cursor: pointer;
   position: relative;
   background-color: #ffffff;
-  color: #ffffff;
+  color: white;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -31,8 +31,8 @@ body {
 
 .button-floating::after {
   content: "";
-  background-color: #5f5fdb;
-  border: 2px solid #5f5fdb;
+  background-color: #f2f2f4;
+  border: 2px solid #4c72ee;
   width: 100%;
   height: 100%;
   position: absolute;
