--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@ body {
   letter-spacing: 0.5px;
   padding: 13px 20px;
   outline: 0;
-  border: 2px solid #1e40af;
+  border: 2px solid #000000;
   cursor: pointer;
   position: relative;
   background-color: #ffffff;
@@ -31,8 +31,8 @@ body {
 
 .button-floating::after {
   content: "";
-  background-color: #f2f2f4;
-  border: 2px solid #4c72ee;
+  background-color: #6e6eefbd;
+  border: 2px solid #6e6eefbd;
   width: 100%;
   height: 100%;
   position: absolute;
